# Quant_Project

./: .gitignore  README.md  factor_configs.py  main.py  main_analyzer.py  pyproject.toml  requirements.txt  strategy_configs.py  universe_config.py
backtester_analysis/: backtester.py  report_generator.py
core/: abstractions.py  ai_model_trainer.py  analysis_metrics.py  decision_logic.py  factor_combiner.py  factor_standardizer.py  rolling_weight_calculator.py  strategy.py  trading_rules.py
data/: data_manager.py  data_providers.py  database_handler.py  trading_calendars.py
factor_analysis/: analysis_metrics.py  factor_calculator.py  factor_report.py  factors.py  factors_complex.py
logger/: logger_config.py
signals/: signals.py  stop_loss.py
strategies/: ai_trainers.py  combiners.py  rolling_calculators.py  standardizers.py
test/: ADXDMI+布林格因子.py  add_index_to_source_db.py  test.py  test_akshare.py  test_backtest_ma_strategy.py  test_check_db.py  test_eda_csi300.py.py  成分股查询.py
